name:                nanomsg-binary
version:             0.1.0.0
synopsis:            Simple binary serialization layer over Nanomsg
-- description:         
homepage:            https://github.com/jcristovao/nanomsg-binary
license:             BSD3
license-file:        LICENSE
author:              João Cristóvão
maintainer:          jmacristovao@gmail.com
copyright:           João Cristóvão 2013
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.18

library
  exposed-modules:    Network.Nanomsg.Binary
  other-extensions:   DeriveDataTypeable
  build-depends:      base            >= 4.7  && < 4.8
                    , binary          >= 0.7  && < 0.8
                    , nanomsg-haskell >= 0.3  && < 0.4
                    , bytestring      >= 0.10 && < 0.11
  hs-source-dirs:     src
  default-language:   Haskell2010
